# benchmark-extractor

./: .gitignore  pyproject.toml
data/: benchmark_results.csv  benchmark_sources.csv  model_sources.csv  output.md
src/: app.py  llm.py  logger.py  utils.py
tests/: test_app.py  test_get_sources.py  test_utils.py
tests/test_data/: sources.csv
